--- a/src/app/@theme/components/nz-menux.component.html
+++ b/src/app/@theme/components/nz-menux.component.html
@@ -5,6 +5,7 @@
       <li
           *ngIf="!menu.children"
           nz-menu-item
+          nzMatchRouter
           [nzPaddingLeft]="menu.level * 24"
           [nzDisabled]="menu.disabled"
           [nzSelected]="menu.selected"
